--- a/Cart/index.html
+++ b/Cart/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ru">
-
-<!-- Mirrored from xpert-ufa.ru/cart/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 05 Jun 2022 11:10:51 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +9,7 @@
 <meta property="og:title" content="Корзина покупок" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="index.html" />
-<meta property="og:image" content="../img/image/catalog/m_logo_xpert.png" />
+<meta property="og:image" content="../img/LOGO.png" />
 <meta property="og:site_name" content="Торговая компания Yuzh.Optor" />
 <link href="../img/image/catalog/favicon(1).png" rel="icon" />
 <link href="../catalog/view/javascript/bootstrap/css/bootstrap.min.css" rel="preload" as="style" />
@@ -25,7 +22,7 @@
 @font-face {font-display:swap;src: url('../catalog/view/theme/newstore/stylesheet/fonts/RobotoCondensed-Bold.ttf');font-style: bold;font-weight:600;}
 @font-face {font-display:swap;font-family:'Marck Script';src: url('../catalog/view/theme/newstore/stylesheet/fonts/MarckScriptRegular.ttf');}
 </style>
-<link rel="stylesheet" href="../ns-cache/_50c36ab27da8bb5ead9c87671a74d2a9.css"/>
+<link rel="stylesheet" href="..js//ns-cache/_50c36ab27da8bb5ead9c87671a74d2a9.css"/>
 <style>
 #cart:hover .dropdown-menu{
 	display:block;
@@ -180,7 +177,7 @@ $('#messageLoadPage').hide();
 					<div class="dropdown-toggle">
 													<div class="additional-tel dth">
 															<a href="tel:+79268800893" target="_blank">
-																+7 (937) 368-11-11</a>
+																+7 (926) 880-08-93</a>
 														</div>
 																			<span class="drop-icon-info"><i class="car-down fa fa-angle-down"></i></span>
 											</div>
@@ -194,9 +191,9 @@ $('#messageLoadPage').hide();
 																				Yuzh.Optor@mail.ru									</a>
 																	</li>
 															<li>
-																	<a href="https://api.whatsapp.com/send/?phone=79373681111" target="_blank">
+																	<a href="https://api.whatsapp.com/send/?phone=79268800893" target="_blank">
 																				<div class="icon-image"><i class="fa fa-whatsapp"></i></div>
-																				+7 (937) 368-11-11									</a>
+																				+7 (926) 880-08-93									</a>
 																	</li>
 																		</ul>
 										<div class="text_after_phone">Ежедневно, C 9:00 до 21:00</div>
@@ -1822,7 +1819,7 @@ $('#top-fixed .btn-search').bind('click', function() {
 				</div>
 				<div class="text-footer-banner">
 					<div class="banner-title-footer"><h3>ЗАКАЗ ПО ТЕЛЕФОНУ</h3></div>
-					<span class="banner-description-footer">+7 (937) 368-11-11</span>
+					<span class="banner-description-footer">+7 (926) 880-08-93</span>
 				</div>
 			</div>
 		</div>
@@ -1890,9 +1887,9 @@ $('#top-fixed .btn-search').bind('click', function() {
 	  <div class="col-sm-3">
 				<h3>Наши Контакты</h3>
 				<ul class="list-unstyled">
-			                            <li><a href="tel:+79373681111" target="_blank"><i class=" fa-width"></i> +7 (937) 368-11-11</a></li>
+			                            <li><a href="tel:+79268800893" target="_blank"><i class=" fa-width"></i> +7 (926) 880-08-93</a></li>
                                       <li><a target="_blank" href="mailto:Yuzh.Optor@mail.ru"><i class=" fa-width"></i> Yuzh.Optor@mail.ru</a></li>
-                                      <li><a href="https://api.whatsapp.com/send/?phone=79373681111"><i class="fa fa-whatsapp fa-width"></i> +7 (937) 368-11-11</a></li>
+                                      <li><a href="https://api.whatsapp.com/send/?phone=79268800893"><i class="fa fa-whatsapp fa-width"></i> +7 (926) 880-08-93</a></li>
                         		</ul>
 		<p>Торговая компания Yuzh.Optor &copy; 2022</p>
 	   </div>
@@ -2001,5 +1998,4 @@ function get_modal_callbacking() {
 </script>
 			
 </body>
-<!-- Mirrored from xpert-ufa.ru/cart/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 05 Jun 2022 11:10:52 GMT -->
 </html>
