--- a/Kontakct.html
+++ b/Kontakct.html
@@ -4178,7 +4178,8 @@
             </div>
         </div>
         <script>
-            $(document).ready(function () {
+            window.addEventListener('DOMContentLoaded', (event) => {
+                $(document).ready(function () {
                 var width_fmns = viewport().width;
                 if (width_fmns >= 992) {
                     if ($("#top-fixed").length == 0) {
@@ -4340,6 +4341,7 @@
 
                 });
             });
+        });  
         </script>
 
     </header>
