--- a/index.html
+++ b/index.html
@@ -1938,7 +1938,9 @@
                             <div class="dropdown-toggle">
                                 <div class="additional-tel dth">
                                     <a href="tel:+79268800893" target="_blank">
-                                        +7 (926) 880-08-93</a>
+                                        +7 (926) 880-08-93</a><br />
+                                        <a href="tel:+79823048935" target="_blank">
+                                            +7 (982) 304-89-35</a>
                                 </div>
                                 <span class="drop-icon-info"><i class="car-down fa fa-angle-down"></i></span>
                             </div>
@@ -1951,15 +1953,19 @@
                                 <li>
                                     <a target="_blank" href=" ">
                                         <div class="icon-image"><img
-                                                src="categories/image/cache/catalog/image/znacki/i-20x20.jpg"
+                                                src="img/image/cache/catalog/image/znacki/i-20x20.jpg"
                                                 alt="Yuzh.Optor@mail.ru"></div>
-                                        Yuzh.Optor@mail.ru
+                                                Yuzh.Optor@mail.ru
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://api.whatsapp.com/send/?phone=79268800893" target="_blank">
                                         <div class="icon-image"><i class="fa fa-whatsapp"></i></div>
                                         +7 (926) 880-08-93
+                                    </a>
+                                    <a href="https://api.whatsapp.com/send/?phone=79823048935" target="_blank">
+                                        <div class="icon-image"><i class="fa fa-whatsapp"></i></div>
+                                        +7 (982) 304-89-35
                                     </a>
                                 </li>
                             </ul>
@@ -4174,13 +4180,13 @@
                     <nav id="additional-menu" class="navbar hmenu_type">
                         <div>
                             <ul class="nav navbar-nav">
-                                <li><a class="no-img-parent-link" href="delivery">
+                                <li><a class="no-img-parent-link" href="delivery.html">
                                         Доставка</a></li>
-                                <li><a class="no-img-parent-link" href="oplata">
+                                <li><a class="no-img-parent-link" href="oplata.html">
                                         Оплата</a></li>
-                                <li><a class="no-img-parent-link" href="about_us">
+                                <li><a class="no-img-parent-link" href="about_us.html">
                                         О нас</a></li>
-                                <li><a class="no-img-parent-link" href="categories/contact-us/">
+                                <li><a class="no-img-parent-link" href="Kontakct.html">
                                         Контакты</a></li>
                             </ul>
                         </div>
@@ -4190,7 +4196,8 @@
         </div>
 
         <script>
-            $(document).ready(function () {
+            window.addEventListener('DOMContentLoaded', (event) => {
+                $(document).ready(function () {
                 var width_fmns = viewport().width;
                 if (width_fmns >= 992) {
                     if ($("#top-fixed").length == 0) {
@@ -4352,6 +4359,7 @@
 
                 });
             });
+        });
         </script>
 
     </header>
