--- a/oplata.html
+++ b/oplata.html
@@ -5908,7 +5908,8 @@
         </div>
     </div>
     <script>
-        $(document).ready(function () {
+        window.addEventListener('DOMContentLoaded', (event) => {
+            $(document).ready(function () {
             var width_fmns = viewport().width;
             if (width_fmns >= 992) {
                 if ($("#top-fixed").length == 0) {
@@ -6070,6 +6071,7 @@
 
             });
         });
+    });  
     </script>
 
 </header>
@@ -6129,14 +6131,17 @@
                     style="font-size: 10.5pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-weight: 700; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">&nbsp;</span>
             </p>
             <p dir="ltr"
-               style="margin-top: 0pt; margin-bottom: 0pt; color: rgb(51, 51, 51); font-family: &quot;Roboto Condensed&quot;, sans-serif; font-size: 14px; line-height: 1.38; text-align: justify; padding: 0pt 0pt 12pt;">
-                <span style="font-size: 10.5pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-weight: 700; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">Интернет-магазин:</span><span
-                    style="font-size: 10.5pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;"> </span><span
-                    style="font-size: 10.5pt; font-family: Arial; color: rgb(0, 0, 0); font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">+7 (982) 304-89-35</span>
-              <br /> <span
-                    style="font-size: 10.5pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;"> </span><span
-                    style="font-size: 10.5pt; font-family: Arial; color: rgb(0, 0, 0); font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;">+7 (926) 880-08-93</span>
-            </p>
+            style="line-height:1.38;text-align: justify;background-color:#ffffff;margin-top:0pt;margin-bottom:0pt;padding:0pt 0pt 12pt 0pt;">
+             <span style="font-size:10.5pt;font-family:Arial;color:#000000;background-color:transparent;font-weight:700;font-style:normal;font-variant:normal;text-decoration:none;vertical-align:baseline;white-space:pre;white-space:pre-wrap;">Интернет-магазин:</span><span
+                 style="font-size:10.5pt;font-family:Arial;color:#000000;background-color:transparent;font-weight:400;font-style:normal;font-variant:normal;text-decoration:none;vertical-align:baseline;white-space:pre;white-space:pre-wrap;"> </span><span
+                 style="font-size: 10.5pt; font-family: Arial; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;"><a
+                 href="https://wa.me/+79268800893" target="_blank">+7 (926) 880-08-93</a></span></p>
+         <p dir="ltr"
+            style="line-height:1.38;text-align: justify;background-color:#ffffff;margin-top:0pt;margin-bottom:0pt;padding:0pt 0pt 12pt 0pt;">
+             <span style="font-size:10.5pt;font-family:Arial;color:#000000;background-color:transparent;font-weight:700;font-style:normal;font-variant:normal;text-decoration:none;vertical-align:baseline;white-space:pre;white-space:pre-wrap;">Интернет-магазин:</span><span
+                 style="font-size:10.5pt;font-family:Arial;color:#000000;background-color:transparent;font-weight:400;font-style:normal;font-variant:normal;text-decoration:none;vertical-align:baseline;white-space:pre;white-space:pre-wrap;"> </span><span
+                 style="font-size: 10.5pt; font-family: Arial; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;"><a
+                 href="https://wa.me/+79823048935" target="_blank">+7 (982) 304-89-35</a></span></p>
             <p dir="ltr" style="line-height:1.38;margin-top:0pt;margin-bottom:0pt;"><span
                     style="font-size: 10.5pt; font-family: Arial; background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; vertical-align: baseline; white-space: pre-wrap;"></span>
             </p>
