--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             m[i].l = 1 * new Date();
             k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
         })
-            (window, document, "script", "../mc.yandex.ru/metrika/tag.js", "ym");
+            (window, document, "script", "mc.yandex.ru/metrika/tag.js", "ym");
 
         ym(80874508, "init", {
             clickmap: true,
@@ -241,6 +241,7 @@
 </head>
 
 <body class="common-home">
+    
     <p id="back-top"><a rel="nofollow" class="btn btn-default" href="#top"><i class="fa fa-chevron-up"
                 style="font-size:18px;"></i></a></p>
     <div id="top-fixed" class="hidden-xs hidden-sm">
@@ -263,7 +264,7 @@
                                     <i class="fa fa-plus plus"></i>
                                     <i class="fa fa-minus minus"></i>
                                 </span>
-                                <a href="AVTOPRINADLEZhNOSTI" class="parent-link dropdown-img">
+                                <a href="categories/category.html" class="parent-link dropdown-img">
                                     <i class="fa fa-angle-down arrow"></i>
                                     АВТОПРИНАДЛЕЖНОСТИ </a>
 
@@ -2502,7 +2503,7 @@
                                     <i class="fa fa-plus plus"></i>
                                     <i class="fa fa-minus minus"></i>
                                 </span>
-                                <a href="AVTOPRINADLEZhNOSTI" class="parent-link dropdown-img">
+                                <a href="categories/category.html" class="parent-link dropdown-img">
                                     <i class="fa fa-angle-down arrow"></i>
                                     АВТОПРИНАДЛЕЖНОСТИ </a>
 
