--- a/Cart/index.html
+++ b/Cart/index.html
@@ -186,9 +186,9 @@ $('#messageLoadPage').hide();
 							<a href="javascript:void(0)" onclick="get_modal_callbacking()"><i class="fa fa-phone-square" aria-hidden="true"></i> Заказать звонок</a>						</li>
 						<li class="line-contact"></li>
 																											<li>
-																	<a target="_blank" href="mailto:Yuzh.Optor@mail.ru">
-																				<div class="icon-image"><img src="img/image/cache/catalog/image/znacki/i-20x20.jpg" alt="Yuzh.Optor@mail.ru" /></div>
-																				Yuzh.Optor@mail.ru									</a>
+																	<a target="_blank" href="mailto:yzho-optor@mail.ru">
+																				<div class="icon-image"><img src="img/image/cache/catalog/image/znacki/i-20x20.jpg" alt="yzho-optor@mail.ru" /></div>
+																				yzho-optor@mail.ru									</a>
 																	</li>
 															<li>
 																	<a href="https://api.whatsapp.com/send/?phone=79000930556" target="_blank">
@@ -1890,7 +1890,7 @@ $('#top-fixed .btn-search').bind('click', function() {
 				<h3>Наши Контакты</h3>
 				<ul class="list-unstyled">
 			                            <li><a href="tel:+79000930556" target="_blank"><i class=" fa-width"></i> +7 (900) 093-05-56</a></li>
-                                      <li><a target="_blank" href="mailto:Yuzh.Optor@mail.ru"><i class=" fa-width"></i> Yuzh.Optor@mail.ru</a></li>
+                                      <li><a target="_blank" href="mailto:yzho-optor@mail.ru"><i class=" fa-width"></i> yzho-optor@mail.ru</a></li>
                                       <li><a href="https://api.whatsapp.com/send/?phone=79000930556"><i class="fa fa-whatsapp fa-width"></i> +7 (900) 093-05-56</a></li>
                         		</ul>
 		<p>Торговая компания Yuzh.Optor &copy; 2022</p>
